The final python script

--- a/bill_division.ipynb
+++ b/bill_division.ipynb
@@ -126,9 +126,19 @@
     "#\n",
     "\n",
     "def bonAppetit(bill, k, b):\n",
-    "    pass\n",
+    "    # get the array of Anna\n",
+    "    bill.pop(k)\n",
     "\n",
-    "if __name__ == '__main__':\n",
+    "    # get the right bill\n",
+    "    actual_bill = sum(bill) // 2\n",
+    "\n",
+    "    # check the bill\n",
+    "    if b == actual_bill:\n",
+    "        print(\"Bon Appetit\")\n",
+    "    else:\n",
+    "        print(f\"{b - actual_bill}\")\n",
+    "\n",
+    "if __name__ == '_main_':\n",
     "    first_multiple_input = input().rstrip().split()\n",
     "\n",
     "    n = int(first_multiple_input[0])\n",
